--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       env:
         SSH_PRIVATE_KEY: $({ secrets.SSH_PRIVATE_KEY })
       run:  |
-        echo "SSH_PRIVATE_KEY" > keyfile
+        echo "$SSH_PRIVATE_KEY" > keyfile
         chmod 600 keyfile
         mkdir -p ~/.ssh
         cp known_hosts ~/.ssh/known_hosts
