--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,4 +20,4 @@ jobs:
         chmod 600 keyfile
         mkdir -p ~/.ssh
         cp known_hosts ~/.ssh/known_hosts
-        ssh -t -i keyfile ubuntu@ec2-16-171-225-150.eu-north-1.compute.amazonaws.com "sudo bash ~/home/ubuntu/certificate_backend/Backend_Certificate/deploy.sh"
+        ssh -t -i keyfile ubuntu@ec2-16-171-225-150.eu-north-1.compute.amazonaws.com "sudo bash ~/dep.sh"
